--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ deploy:
   provider: elasticbeanstalk
   region: 'eu-north-1'
   app: 'multi-docker'
-  env: 'MultiDocker-env'
+  env: 'Docker-env'
   bucket_name: 'elasticbeanstalk-eu-north-1-295550966758'
   bucket_path: 'docker-multi'
   on:
